Avoid copy of array.